--- a/server/project/mj-client/src/main/resources/application.yml
+++ b/server/project/mj-client/src/main/resources/application.yml
@@ -22,9 +22,9 @@ debug:
 
 
 jdbc:
-    url: jdbc:mysql://127.0.0.1:3306/boss?autoReconnect=true&characterEncoding=utf8&useSSL=false
+    url: jdbc:mysql://127.0.0.1:3306/boss?autoReconnect=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
     username: root
-    password: 111111
+    password: YSsT4y>V4.EE
     driver-class-name: com.mysql.jdbc.Driver
     maxNums: 20
     minNums: 5
