--- a/server/project/pom.xml
+++ b/server/project/pom.xml
@@ -19,16 +19,18 @@
         <module>distribution</module>
     </modules>
     <properties>
-        <spring.version>4.3.5.RELEASE</spring.version>
+        <spring.version>4.3.22.RELEASE</spring.version>
         <jackson.version>2.8.5</jackson.version>
         <junit.version>4.12</junit.version>
         <commons-collections.version>3.2.2</commons-collections.version>
-        <commons-pool2.version>2.4.2</commons-pool2.version>
+        <commons-pool2.version>2.6.0</commons-pool2.version>
         <velocity.version>1.7</velocity.version>
         <velocity-tools.version>2.0</velocity-tools.version>
-        <javassist.version>3.20.0-GA</javassist.version>
-        <slf4j.version>1.7.22</slf4j.version>
-        <mysql.version>5.1.40</mysql.version>
+        <javassist.version>3.24.1-GA</javassist.version>
+        <slf4j.version>1.7.25</slf4j.version>
+        <mysql.version>6.0.6</mysql.version>
+        <netty.version>4.1.33.Final</netty.version>
+        <forkjoin.version>2.1.3</forkjoin.version>
     </properties>
     <dependencies>
         <dependency>
@@ -171,7 +173,7 @@
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
-            <version>4.1.5.Final</version>
+            <version>${netty.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -187,7 +189,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
-            <version>1.0.24</version>
+            <version>1.1.12</version>
         </dependency>
 
         <dependency>
@@ -195,6 +197,37 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.forkjoin</groupId>
+            <artifactId>forkjoin-apikit</artifactId>
+            <version>${forkjoin.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.forkjoin</groupId>
+            <artifactId>forkjoin-apikit-core</artifactId>
+            <version>${forkjoin.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.forkjoin</groupId>
+            <artifactId>forkjoin-apikit-springmvc</artifactId>
+            <version>${forkjoin.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.forkjoin</groupId>
+            <artifactId>forkjoin-jdbckit-core</artifactId>
+            <version>${forkjoin.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.forkjoin</groupId>
+            <artifactId>forkjoin-core</artifactId>
+            <version>${forkjoin.version}</version>
+        </dependency>
+
     </dependencies>
     <build>
         <!-- <resources> <resource> <directory>src/main/resources</directory> <filtering>true</filtering>
