--- a/server/project/distribution/pom.xml
+++ b/server/project/distribution/pom.xml
@@ -60,7 +60,7 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>docker</finalName>
+        <finalName>dist</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
